3.6/cloudhub/building-an-https-service.adoc
= Building an HTTPS Service
:keywords: cloudhub, example, security, https

CloudHub supports building HTTPS/SSL based services so you can be ensured of your data confidentiality. It is very easy to configure your service to support SSL.

This tutorial builds on existing tutorials, so to begin, build a service using the link:/documentation/display/current/Hello+World+on+CloudHub[Hello World] tutorial.

You can now modify your existing service to use HTTPS as detailed in the following steps.

First, if you don't have a keystore for your service, generate a new keystore. You can do this using the command line and the keytool utility from the JDK.

[source,bash]
----
 keytool -genkey -alias mule -keyalg RSA -keystore keystore.jks
----

This command creates a file named `keystore.jks`. Before proceeding, verify that this file exists and appears in the folder `src/main/resources`.

Next, configure an HTTPS connector inside your Mule configuration:

[source,xml]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns:https="http://www.mulesoft.org/schema/mule/https" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.1"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/https http://www.mulesoft.org/schema/mule/https/current/mule-https.xsd">
    <http:listener-config name="HTTPS_Listener_Configuration" protocol="HTTPS" host="0.0.0.0" port="${https.port}" doc:name="HTTP Listener Configuration">
        <tls:context>
            <tls:key-store path="keystore.jks" password="password" keyPassword="${keystore.password}"/>
        </tls:context>
    </http:listener-config>
...
----

For more details on how this is configured, see the link:/documentation/display/current/HTTP+Connector[HTTP Connector] documentation.

Finally, configure any host IP addresses you want to use HTTPS on with the HTTPS scheme and the `${https.port}` variable for the port. Make sure to include a reference to the HTTPS global connector configuration. For example:

[source,xml]
----
<http:listener config-ref="HTTPS_Listener_Configuration" path="hello" doc:name="HTTP"/>
----

Your application is now ready to be deployed on CloudHub. You can access your endpoint via the normal HTTPS address, for example: `https://yourdomain.cloudhub.io`.
